# Satellite-Coverage-Analyzer

./: .gitignore  CMakeLists.txt  README.md  index.html  package-lock.json  package.json
backend/: CMakeLists.txt
backend/include/: Satellite.h  Simulation.h
backend/src/: Satellite.cpp  SatelliteCoverage.cpp  Simulation.cpp
cache/: satellites_data.tle
include/Models/: Satellite.h
libs/libsgp4/: Tle.cc
public/Models/Earth 2/: scene.gltf
src/: App.tsx  Loading.css  Simulation.tsx  db.ts  main.cpp  main.tsx
src/Components/: ListGroup.tsx
src/Models/: Satellite.cpp
src/core/: CameraController.tsx  LoadingScreen.tsx  Simulation.tsx  Sunlight.tsx
src/database/: db.ts  loadData.ts
src/rendering/: EarthMesh.tsx  SatelliteMesh.tsx  Skymap.tsx
src/styles/: App.css  Loading.css
src/ui/: Filter.tsx  Group.tsx  TimeControls.tsx  Topbar.tsx  UIOverlay.tsx
src/wasm/: SatelliteCoverage.js  SatelliteCoverage.wasm
